# downloads-organizer

./: CMakeLists.txt  IOManager.cpp  IOManager.hpp  README.md  RuleEngine.cpp  RuleEngine.hpp  SBOM.md  THREAT_MODEL.md  UI.cpp  UI.hpp  main.cpp  organizer_journal.json  tree-view.txt  types.hpp  utils.hpp  watch-tree.ps1
tests/: CMakeLists.txt  RuleEngineTests.cpp
